<resources>
    <string name="app_name">UnitConverter</string>
    <string name="txt1">Select Temperature Converter</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dic">Enter degrees in celsius:</string>
    <string name="dif">Degrees in Fahrenheit:</string>
    <string name="dik">Degrees in Kelvin:</string>
    <string name="ctof">celsiustofahrenheit</string>
    <string name="developer">Developed by:Santanu Bandyopadhyay</string>
    <string name="k_f">K-F</string>
    <string name="k_c">K-C</string>
    <string name="f_k">F-K</string>
    <string name="f_c">F-C</string>
    <string name="c_k">C-K</string>
    <string name="c_f">C-F</string>
</resources>